# rust-auto-commit

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  error.rs  lib.rs  main.rs  migrations.rs  prompts.rs
src/commands/: commit.rs  commitlint.rs  config.rs  githook.rs  mod.rs
src/engine/: engine.rs  mod.rs  openai.rs  test.rs
src/i18n/: en.rs  mod.rs  pt-br.rs
src/utils/: git.rs  token_count.rs  version.rs
